committing event add for SuperDog

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>APP NAME: Coding Challenge By Chad Farmer</title>
+    <title>SuperDog Events: Coding Challenge By Chad Farmer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,7 +34,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
                 <img src="/img/Chad Farmer Development_lig_clov-tp.png" width="40" height="40"
-                    class="d-inline-block align-text-top-me-1"> REWIND
+                    class="d-inline-block align-text-top-me-1"> SuperDog Events
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
                         <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/app.html">Rewind</a>
+                        <a class="nav-link" href="/app.html">SuperDog Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/code.html">The Code</a>
@@ -66,18 +66,23 @@
         <div class="container mt-5">
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col-12 col-md-8 order-last order-md-first">
-                    <h2 class="fw-bold">Rewind: Coding Challenge</h2>
-                    <h4>There and back again. A javascript coding exercise using arrays. Write a
-                        program the displays a string in reverse.
-                    </h4>
+                    <h2 class="fw-bold">SuperDog Events: Coding Challenge</h2>
+                    <h4> SuperDog Events is an event company that produces comic cons. The marketing team has requested
+                        a site that displays stats from their events. You are given an array of event data to build a
+                        site.</h4>
+                    <p>
+                        <h5>Given an array of objects of ent data display the following:</h5>
+                    </p>
                     <ul class="checklist">
-                        <li><i class="bi bi-check"></i>CSS and Bootstrap</li>
-                        <li><i class="bi bi-check"></i>Javascript Fundamentals</li>
-                        <li><i class="bi bi-check"></i>Javascript Loops</li>
-                        <li><i class="bi bi-check"></i>Javascript Functions</li>
-                        <li><i class="bi bi-check"></i>Javascript Dom Manipulation</li>
-                        <li><i class="bi bi-check"></i>Javascript Dom if/then/else</li>
-                        <li><i class="bi bi-check"></i>Javascript Dom boolean logic</li>
+                        <li>Total attendance by City</li>
+                        <li>Average attendance by City</li>
+                        <li>Least attended by City</li>
+                        <li>Most attended by City</li>
+                        <li>Show these stats for All Events</li>
+                        <li>
+                            Extra Credit: Add the ability to add additional events. Store the events in local storage or
+                            a database.
+                        </li>
                     </ul>
                     <h3>Technologies Used</h3>
                     <div class="technicons">
@@ -88,7 +93,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-4 mb-3">
-                    <img src="/img/canv/3.jpg" class="img-fluid">
+                    <img src="/img/canv/SuperDog.jpg" class="img-fluid">
                     <div class="mt-5 text-center">
                         <a type="button" class="btn btn-outline-primary bnt-lg">Try It Out</a>
                     </div>
