--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>APP NAME: Coding Challenge By Chad Farmer</title>
+    <title>SuperDog Events: Coding Challenge By Chad Farmer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,7 +34,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
                 <img src="/img/Chad Farmer Development_lig_clov-tp.png" width="40" height="40"
-                    class="d-inline-block align-text-top-me-1"> REWIND
+                    class="d-inline-block align-text-top-me-1"> SuperDog Events
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/app.html">The App</a>
+                        <a class="nav-link active" aria-current="page" href="/app.html">SuperDog Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/code.html">The Code</a>
@@ -64,21 +64,61 @@
 
     <main class="flex-shrink-0">
         <div class="container mt-5">
-            <h1>Rewind: A javascript challenge</h1>
-            <h4 class="lead">Enter a message and hit the button. The program will print the message in reverse. </h4>
-            <div class="row align-items-end mt-5">
-                <div class="col">
-                    <label for="txtMessage" class="form-label">Message</label>
-                    <input type="text" name="txtMessage" class="form-control" id="txtMessage" placeholder="Enter Message">
+            <div class="row">
+                <div class="col-6">
+                    <div class="dropdown">
+                        <button class="btn btn-dark dropdown-toggle" type="button" id="eventDropDown"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Pick a Location
+                        </button>
+                        <ul class="dropdown-menu" id="eventDropDownList" aria-labelledby="eventDropDown">
+                            <!--City Data Goes Here-->
+                        </ul>
+                    </div>
+                    <table class="table table-striped">
+                        <tr>
+                            <th colspan="2" id="statsHeader">Stats For All Events</th>
+                        </tr>
+                        <tr>
+                            <td>Total Attendance</td>
+                            <td id="total">100</td>
+                        </tr>
+                        <tr>
+                            <td>Average Attendance</td>
+                            <td id="average">100</td>
+                        </tr>
+                        <tr>
+                            <td>Most Attended</td>
+                            <td id="most">100</td>
+                        </tr>
+                        <tr>
+                            <td>Least Attended</td>
+                            <td id="least">100</td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="col">
-                    <button id="btnSubmit" class="btn btn-primary">Reverse Me!</button>
+                <div class="col-12 col-md-6 order-first order-md-2">
+                    <img src="/img/canv/SuperDog.jpg" class="img-fluid p-2">
                 </div>
             </div>
-            <div class="messageStyle mt-5">
-                <ol id="results" class="">
-                    <!-- My message will go here -->
-                </ol>
+            <div class="row">
+                <div class="col">
+                    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#addEvent">Add</button>
+                    <table class="table table-striped" id="eventData">
+                        <thead>
+                            <tr>
+                                <th>Event Name</th>
+                                <th>City</th>
+                                <th>State</th>
+                                <th>Attendance</th>
+                                <th>Event Date</th>
+                            </tr>
+                        </thead>
+                        <tbody id="eventBody">
+                            <!-- Data Goes Here-->
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </main>
@@ -110,7 +150,116 @@
         </div>
     </footer>
 
+    <div class="modal" id="addEvent" tabindex="-1" aria-labelledby="Add Event" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add A New Event</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="newEventForm" onsubmit="saveEventData();">
+                    <div class="modal-body">
 
+                        <div class="form-group">
+                            <label for="newEventName">Event Name</label>
+                            <input id="newEventName" type="text" class="form-control" placeholder="Event-Name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="newEventCity">City</label>
+                            <input id="newEventCity" type="text" class="form-control" placeholder="City" required>
+                        </div>
+                        <div class="form-group">
+
+                            <label for="newEventState">State</label>
+                            <select class="form-control" id="newEventState" required>
+                                <option value="">Select a state</option>
+                                <option value="AL">Alabama</option>
+                                <option value="AK">Alaska</option>
+                                <option value="AZ">Arizona</option>
+                                <option value="AR">Arkansas</option>
+                                <option value="CA">California</option>
+                                <option value="CO">Colorado</option>
+                                <option value="CT">Connecticut</option>
+                                <option value="DE">Delaware</option>
+                                <option value="DC">District Of Columbia</option>
+                                <option value="FL">Florida</option>
+                                <option value="GA">Georgia</option>
+                                <option value="HI">Hawaii</option>
+                                <option value="ID">Idaho</option>
+                                <option value="IL">Illinois</option>
+                                <option value="IN">Indiana</option>
+                                <option value="IA">Iowa</option>
+                                <option value="KS">Kansas</option>
+                                <option value="KY">Kentucky</option>
+                                <option value="LA">Louisiana</option>
+                                <option value="ME">Maine</option>
+                                <option value="MD">Maryland</option>
+                                <option value="MA">Massachusetts</option>
+                                <option value="MI">Michigan</option>
+                                <option value="MN">Minnesota</option>
+                                <option value="MS">Mississippi</option>
+                                <option value="MO">Missouri</option>
+                                <option value="MT">Montana</option>
+                                <option value="NE">Nebraska</option>
+                                <option value="NV">Nevada</option>
+                                <option value="NH">New Hampshire</option>
+                                <option value="NJ">New Jersey</option>
+                                <option value="NM">New Mexico</option>
+                                <option value="NY">New York</option>
+                                <option value="NC">North Carolina</option>
+                                <option value="ND">North Dakota</option>
+                                <option value="OH">Ohio</option>
+                                <option value="OK">Oklahoma</option>
+                                <option value="OR">Oregon</option>
+                                <option value="PA">Pennsylvania</option>
+                                <option value="RI">Rhode Island</option>
+                                <option value="SC">South Carolina</option>
+                                <option value="SD">South Dakota</option>
+                                <option value="TN">Tennessee</option>
+                                <option value="TX">Texas</option>
+                                <option value="UT">Utah</option>
+                                <option value="VT">Vermont</option>
+                                <option value="VA">Virginia</option>
+                                <option value="WA">Washington</option>
+                                <option value="WV">West Virginia</option>
+                                <option value="WI">Wisconsin</option>
+                                <option value="WY">Wyoming</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="newEventAttendance">Attendance</label>
+                            <input id="newEventAttendance" type="number" class="form-control" placeholder="Attendance"
+                                required>
+                        </div>
+                        <div class="form-group">
+                            <label for="newEventDate">Event Date</label>
+                            <input id="newEventDate" type="date" class="form-control" placeholder="Event Date"
+                                required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <template id="eventData-template">
+        <tr>
+            <td data-id="eventName"></td>
+            <td data-id="city"></td>
+            <td data-id="state"></td>
+            <td data-id="attendance"></td>
+            <td data-id="eventDate"></td>
+        </tr>
+    </template>
+
+    <template id="dropDown-template">
+        <li><a class="dropdown-item" onclick="getEventData(this)" href="#"></a>
+        </li>
+    </template>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
@@ -121,7 +270,9 @@
     </script>
 
     <script>
-        document.getElementById("btnSubmit").addEventListener("click", getMessage);
+        window.onload = (event) => {
+            buildDropDown();
+        };
     </script>
 </body>
 
